--- a/settings.json
+++ b/settings.json
@@ -9,7 +9,7 @@
   },
   "base_keymap": "VSCode",
   "ui_font_size": 14,
-  "buffer_font_size": 12,
+  "buffer_font_size": 13,
   "ui_font_family": "Zed Plex Sans",
   "formatter": "prettier",
   "gutter": {
@@ -17,8 +17,8 @@
   },
   "theme": {
     "mode": "system",
-    "light": "Sandcastle",
-    "dark": "Sandcastle"
+    "light": "Catppuccin Mocha - No Italics",
+    "dark": "Catppuccin Mocha - No Italics"
   },
   "project_panel": {
     "dock": "left",
