--- a/zed-settings.json
+++ b/zed-settings.json
@@ -3,22 +3,23 @@
     "dock": "right",
     "default_model": {
       "provider": "zed.dev",
-      "model": "claude-3-5-sonnet-latest"
+      "model": "claude-3-7-sonnet-latest"
     },
     "version": "2"
   },
   "base_keymap": "VSCode",
-  "ui_font_size": 15,
-  "buffer_font_size": 13,
-  "ui_font_family": "Zed Plex Sans",
+  "ui_font_size": 14,
+  "buffer_font_size": 12,
+  "ui_font_family": "Zed Plex Mono",
+  "buffer_font_family": "Zed Plex Mono",
   "formatter": "prettier",
   "gutter": {
     "line_numbers": true
   },
   "theme": {
     "mode": "system",
-    "light": "Catppuccin Mocha - No Italics",
-    "dark": "Catppuccin Mocha - No Italics"
+    "light": "Github Dark Dimmed",
+    "dark": "Github Dark Dimmed"
   },
   "project_panel": {
     "dock": "left",
